syntax = "proto3";

package video;

option go_package = "api/adapter/grpc/video";

service VideoService {
  rpc UploadVideo (UploadVideoRequest) returns (UploadVideoResponse);
  rpc GetVideoURL (GetVideoRequest) returns (GetVideoResponse);
  rpc ListVideos (ListVideosRequest) returns (ListVideosResponse);
}

message UploadVideoRequest {
  string title = 1;
  bytes file = 2;
}

message UploadVideoResponse {
  string video_id = 1;
}

message GetVideoRequest {
  string video_id = 1;
}

message GetVideoResponse {
  string presigned_url = 1;
}

message ListVideosRequest {}

message VideoInfo {
  string video_id = 1;
  string title = 2;
  string created_at = 3;
}

message ListVideosResponse {
  repeated VideoInfo videos = 1;
}
